Group B/B5/sourcecode/y.output
Grammar

    0 $accept: s $end

    1 s: simple
    2  | compound

    3 simple: subject VERB object

    4 compound: subject VERB object CONJUNCN subject VERB object

    5 subject: NOUN
    6        | PRONOUN

    7 object: NOUN
    8       | ADJECTIVE NOUN
    9       | PREPOS NOUN
   10       | ADVERB NOUN


Terminals, with rules where they appear

$end (0) 0
error (256)
VERB (258) 3 4
PRONOUN (259) 6
CONJUNCN (260) 4
NOUN (261) 5 7 8 9 10
PREPOS (262) 9
ADJECTIVE (263) 8
ADVERB (264) 10


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
s (11)
    on left: 1 2, on right: 0
simple (12)
    on left: 3, on right: 1
compound (13)
    on left: 4, on right: 2
subject (14)
    on left: 5 6, on right: 3 4
object (15)
    on left: 7 8 9 10, on right: 3 4


State 0

    0 $accept: . s $end

    PRONOUN  shift, and go to state 1
    NOUN     shift, and go to state 2

    s         go to state 3
    simple    go to state 4
    compound  go to state 5
    subject   go to state 6


State 1

    6 subject: PRONOUN .

    $default  reduce using rule 6 (subject)


State 2

    5 subject: NOUN .

    $default  reduce using rule 5 (subject)


State 3

    0 $accept: s . $end

    $end  shift, and go to state 7


State 4

    1 s: simple .

    $default  reduce using rule 1 (s)


State 5

    2 s: compound .

    $default  reduce using rule 2 (s)


State 6

    3 simple: subject . VERB object
    4 compound: subject . VERB object CONJUNCN subject VERB object

    VERB  shift, and go to state 8


State 7

    0 $accept: s $end .

    $default  accept


State 8

    3 simple: subject VERB . object
    4 compound: subject VERB . object CONJUNCN subject VERB object

    NOUN       shift, and go to state 9
    PREPOS     shift, and go to state 10
    ADJECTIVE  shift, and go to state 11
    ADVERB     shift, and go to state 12

    object  go to state 13


State 9

    7 object: NOUN .

    $default  reduce using rule 7 (object)


State 10

    9 object: PREPOS . NOUN

    NOUN  shift, and go to state 14


State 11

    8 object: ADJECTIVE . NOUN

    NOUN  shift, and go to state 15


State 12

   10 object: ADVERB . NOUN

    NOUN  shift, and go to state 16


State 13

    3 simple: subject VERB object .
    4 compound: subject VERB object . CONJUNCN subject VERB object

    CONJUNCN  shift, and go to state 17

    $default  reduce using rule 3 (simple)


State 14

    9 object: PREPOS NOUN .

    $default  reduce using rule 9 (object)


State 15

    8 object: ADJECTIVE NOUN .

    $default  reduce using rule 8 (object)


State 16

   10 object: ADVERB NOUN .

    $default  reduce using rule 10 (object)


State 17

    4 compound: subject VERB object CONJUNCN . subject VERB object

    PRONOUN  shift, and go to state 1
    NOUN     shift, and go to state 2

    subject  go to state 18


State 18

    4 compound: subject VERB object CONJUNCN subject . VERB object

    VERB  shift, and go to state 19


State 19

    4 compound: subject VERB object CONJUNCN subject VERB . object

    NOUN       shift, and go to state 9
    PREPOS     shift, and go to state 10
    ADJECTIVE  shift, and go to state 11
    ADVERB     shift, and go to state 12

    object  go to state 20


State 20

    4 compound: subject VERB object CONJUNCN subject VERB object .

    $default  reduce using rule 4 (compound)
